--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -6,11 +6,12 @@ At the general folder of all projects do this to install react and webpack:
 2.) npm init -y
 3.) npm install --save-dev react react-dom webpack webpack-cli@3.3.12 babel-cli @babel/core @babel/preset-react html-webpack-plugin clean-webpack-plugin webpack-dev-server babel-loader mini-css-extract-plugin
 
-4.) For such a project structure:
+4.) For such a project structure:</br>
+<pre>
 css/main.css
 html/index.html
 src/main.js
-
+</pre>
 Create webpack.config.js file at the specific project and copy that:
 <pre>
 const path = require('path');
@@ -66,16 +67,3 @@ module.exports = {
 </pre>
 
 6.) npx webpack-dev-server -d
-<pre>
-        פרויקט ריאקט כולל קבצי JavaScript עם קוד JSX בתוכם. הבעיה היא שדפדפן לא יודע להריץ קוד JSX ולכן אנחנו צריכים להפוך את קוד ה JSX לקוד JavaScript רגיל שדפדפן יכול להבין לפני שנוכל לטעון את הדף שלנו בדפדפן. הכלי שהופך קוד JSX לקוד JavaScript רגיל נקרא Babel והדרך המקובלת להשתמש בו היא באמצעות כלי אחר שנקרא Webpack.
-
-הכלי וובפאק הוא כלי בניה לפרויקט שלוקח קוד מקור והופך אותו למשהו שאפשר לטעון בדפדפן. אנחנו נגדיר את קוד המקור שלנו בתיקיה בשם src ונבקש מ webpack לבנות עבורנו את הפרויקט ולשים אותו בסוף בתוך תיקיה שנקראת dist. במהלך הפיתוח נעבוד עם כלי בשם webpack-dev-server כדי שלא נצטרך לבנות כל פעם מחדש את הפרויקט ונוכל לעבוד בצורה שוטפת.
-
-וובפאק הוא כלי שמופעל באמצעות Node.JS ולכן בשביל לעבוד עם וובפאק אנחנו צריכים לארגן את הפרויקט שלנו דרך Node. אני אראה כאן בקצרה את השלבים לבניית פרויקט וובפאק פשוט עבור ריאקט. למידע נוסף ומעמיק יותר על וובפאק אני ממליץ לצפות בהזדמנות בקורס Webpack שיש לנו כאן באתר.
-
-בתיקיית הדוגמאות תוכלו למצוא את התבנית לפרויקט ריק שאני בונה כאן בוידאו. מוזמנים להוריד את הדוגמא משם ולהמשיך אצלכם או ללכת איתי יחד עם הוידאו ולבצע כל צעד אצלכם על המכונה.
-
-נתחיל ביצירת תיקיה חדשה עבור הפרויקט מתוך הממשק הגרפי של חלונות. אני אקרא לתיקיה react-course. אתם יכולים לבחור כל שם ובלבד שיהיה ייחודי עבורכם (אל תקחו משהו גנרי כמו react או webpack). לאחר מכן אפתח cmd בתוך תיקיה זו.
-
-בתוך ה cmd אכתוב את הפקודה הבאה כדי לאתחל את התיקיה בתור תיקיית פרויקט Node:
-    </pre>
