--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -67,3 +67,132 @@ module.exports = {
 </pre>
 
 6.) npx webpack-dev-server -d for development environment or npx webpack -p for production environment
+
+----------------------------------------------------------------------------------------------------------------
+# Debugging React Apps
+
+1. Debug with Source Maps
+
+2. Compiler vs. Runtime Errors
+
+3. Create a break point from debugger
+
+4. Create a break point from code
+
+5. React Dev Tools
+
+
+-------------------------------------------------------------------------------------------------------------------
+# JSX Basics
+
+1. Inject JavaScript Code to JSX with {...} and Conditionals in JSX
+<pre>
+  function App() {
+  const n = Math.random();
+
+  return (
+    <div className="App">
+      <p>{n}</p>
+      {n > 0.5 ? <p>Hello</p> : <p>Bye bye</p>}
+    </div>
+  );
+}
+</pre>
+
+2. Inline styles
+
+<pre>
+function App() {
+  const n = Math.random();
+  let text, style;
+
+  if (n > 0.5) {
+    text = "Hello";
+    style = { color: "blue" };
+  } else {
+    text = "Bye bye";
+    style = { color: "red" };
+  }
+
+  return (
+    <div className="App">
+      <p>{n}</p>
+      <p style={style}>{text}</p>
+    </div>
+  );
+}
+</pre>
+
+3. Return multiple elements from a single component
+<pre>
+function Person(props) {
+  const { name } = props;
+  return (
+    <>
+      <p>Hi! My name is {name}</p>
+      <p>Nice to meet you</p>
+    </>
+  );
+}
+</pre>
+
+----------------------------------------------------------
+# Props Agenda
+
+1. Passing and accepting props
+
+2. What can you pass as props:
+  - Passing numbers
+  - Passing arrays
+
+3. Default property values
+
+example:
+-main.js
+<pre>
+import React from 'react';
+import ReactDOM from 'react-dom';
+import Person from './person';
+
+const App = () => {
+const obj = {  name:"bob", live:"israel", likes:"stuff",};
+const colors = ['red', 'blue' , 'yellow'];
+const p = Math.random();
+return (
+    <div>
+      <Person {...obj} show={p > 0.5} />
+      <Person name = "bob" age = {25} favoriteColors = {colors} show={p > 0.5}/>
+    </div>
+  )
+};
+
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
+</pre>
+
+-person.js
+<pre>
+import React from 'react';
+
+export default function Person(props) {
+  const {name , live , likes , age , favoriteColors , show} = props;
+  const nextYear = age + 1;
+  const joincolors = favoriteColors.join('-');
+  if(!show) return false;
+
+  return (
+    <>
+    <h2>Hello! My name is: {name} I live in: {live} love {likes} and my favorite colorsis: {joincolors}</h2>
+    <p>Next year I'll be {nextYear} years old</p>
+    </>
+  );
+}
+
+Person.defaultProps = {
+  live:'Israel',
+  likes:'react',
+  age:20,
+  favoriteColors: ['black' , 'pink'],
+}
+
+</pre>
