--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -86,6 +86,7 @@ module.exports = {
 # JSX Basics
 
 1. Inject JavaScript Code to JSX with {...} and Conditionals in JSX
+```html
 <pre>
   function App() {
   const n = Math.random();
@@ -98,9 +99,9 @@ module.exports = {
   );
 }
 </pre>
-
+```
 2. Inline styles
-
+```html
 <pre>
 function App() {
   const n = Math.random();
@@ -122,8 +123,9 @@ function App() {
   );
 }
 </pre>
-
+```
 3. Return multiple elements from a single component
+```html
 <pre>
 function Person(props) {
   const { name } = props;
@@ -135,7 +137,7 @@ function Person(props) {
   );
 }
 </pre>
-
+```
 ----------------------------------------------------------
 # Props Agenda
 
@@ -148,7 +150,8 @@ function Person(props) {
 3. Default property values
 
 example:
--main.js
+# main.js
+```html
 <pre>
 import React from 'react';
 import ReactDOM from 'react-dom';
@@ -169,8 +172,10 @@ return (
 const root = document.querySelector('main');
 ReactDOM.render(<App />, root);
 </pre>
+```
 
--person.js
+# person.js
+```html
 <pre>
 import React from 'react';
 
@@ -196,3 +201,4 @@ Person.defaultProps = {
 }
 
 </pre>
+```
