--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -190,3 +190,84 @@ Person.defaultProps = {
   favoriteColors: ['black' , 'pink'],
 }
 ```
+# State
+
+1. What is state
+
+2. Counter component
+
+3. Add delta(numberInput in my example) to Counter's state
+
+4. Careful: mutability
+  - Trying to save an object in state
+  - React won't detect the change
+
+example:
+# main.js
+```JS
+import React from 'react';
+import ReactDOM from 'react-dom';
+import Counter from './counter';
+
+const App = () => {
+  return (
+    <div>
+      <Counter />
+      <Counter />
+      <Counter />
+      <Counter />
+      <Counter />
+    </div>
+  )
+};
+
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
+```
+
+# counter.js
+```JS
+import React from 'react';
+import { useState } from 'react';
+
+export default function Counter() {
+  const [count , setCount] = useState(0);
+  const [numberInput , setNumberInput] = useState(1);
+
+  function saveNewInput(e) {
+      setNumberInput(Number(e.target.value));
+  }
+  
+  function inc() {
+      setCount(oldValue => oldValue + numberInput);
+  }
+
+  function dec() {
+    setCount(oldValue => oldValue - numberInput);
+  }
+
+  function reset() {
+      setCount(0);
+  }
+
+  const styleBtn = {
+    width: '5rem',
+    margin: '5px',
+  }
+
+  return (
+    <div>
+      <label>
+        Increase By:
+        <input type="number" value={numberInput} onChange={saveNewInput}/>
+      </label>
+      <p>
+        I was clicked {count} times    
+        <button style={styleBtn} onClick={inc}>Click Me to increase</button>
+        <button style={styleBtn} onClick={dec}>Click Me to decrease</button>
+        <button style={styleBtn} onClick={reset}>Reset</button>
+      </p>
+    </div>
+  );
+}
+```
