--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -271,3 +271,101 @@ export default function Counter() {
   );
 }
 ```
+# Passing state as props
+
+1. Data ownership in React
+
+2. Refactoring: Moving state up the component tree
+
+3. Refactoring: Sending the state down as props
+
+example:
+# main.js
+```JS
+import React from 'react';
+import ReactDOM from 'react-dom';
+import App from './app.js';
+const root = document.querySelector('main');
+ReactDOM.render(<App/> , root);
+```
+
+# app.js
+```JS
+import React from 'react';
+import Counter from './counter.js';
+import NumbersBox from './numbersBox.js';
+import { useState } from 'react';
+
+export default function App() {
+  const [delta , setDelta] = useState(1);
+
+  return (
+    <>
+        <NumbersBox delta={delta} setDelta={setDelta}/>
+        <Counter delta={delta} value={1} setDelta={setDelta}/>
+        <Counter delta={delta} value={2} setDelta={setDelta}/>
+        <Counter delta={delta} value={3} setDelta={setDelta}/>
+        <Counter delta={delta} value={4} setDelta={setDelta}/>
+        <Counter delta={delta} value={5} setDelta={setDelta}/>
+    </>
+  );
+}
+```
+
+# numbersBox.js
+```JS
+import React from 'react';
+
+export default function NumbersBox(props) {
+  const {delta , setDelta} = props;
+
+  function hadndleInputChange(e) {
+      setDelta(Number(e.target.value));
+  }
+
+  return(
+    <label>
+        Increase by: 
+        <input type="number" value={delta} onChange={hadndleInputChange}></input>
+    </label>
+  );
+}
+```
+
+# counter.js
+```JS
+import React from 'react';
+import { useState } from 'react';
+
+export default function Counter(props) {
+  const {delta , value , setDelta} = props;
+  const [count , setCount] = useState(0);
+
+  function inc() {
+    const newVal = count + delta;
+    if(newVal > value*10 && delta!==1) {
+      setDelta(1);
+    } else {
+      setCount(newVal);
+    }
+  }
+
+  function dec() {
+    setCount(oldVal => oldVal - delta);
+  }
+
+  function reset() {
+    setCount(0);
+  }
+
+  return(
+    <div>
+        <label>I was clicked {count} times and max to change increase to 1: {10*value}
+            <button onClick = {inc}>Click me to increase</button>
+            <button onClick = {dec} >Click me to decrease</button>
+            <button onClick = {reset}>Click me to reset</button>
+        </label>
+    </div>
+  );
+}
+```
