--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -1,3 +1,22 @@
+# React On Windows
+
+1. Requirements:
+  - Install Node.JS
+  - Install Visual Studio Code
+
+2. A New React Project Template
+  - HTML file
+  - JavaScript React file
+  - CSS files
+
+3. Running The Example Project
+  - npx webpack-dev-server -d
+  - npx webpack -p
+
+4. Creating a new component
+  - Add a new JavaScript file
+  - Import the component and show it on screen
+
 For react project need:
 
 1.) Install Node.JS
@@ -369,5 +388,103 @@ export default function Counter(props) {
         </label>
     </div>
   );
+}
+```
+
+# React Class Syntax
+
+1. React Syntaxes: React.createClass -> Classes -> Hooks
+  2013 -> React.createClass({ ... })
+  2016 -> React 16   -> class Person extends React.component { ... }
+  2019 -> React 16.8 -> useState(), ...
+
+
+2. Refactoring: From hooks to classes
+  - Component template
+  - Passing props
+  - Using state
+  - Creating event handlers
+
+3. Which one should you use?
+
+How to change hooks to classes:
+
+1. class need extends React.Component
+2. class need constructor to get props
+3. super(props) save it in this.props
+4. Must one render function that return JSX
+5. There is one state obj that saved in this.state = {one : ... , two : ...};
+6. To update state parameter do: this.setState({one : ... , two : ...});
+
+for example:
+# Person component with Hooks vs class:
+```JS
+import React from 'react';
+import { useState } from 'react';
+import _ from 'lodash';
+
+//PersonClass
+export default class PersonClass extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {mood: getRandomMood()};
+    this.changeMood = this.changeMood.bind(this);
+  }
+
+  changeMood () {
+    this.setState({mood:getRandomMood()});
+  }
+
+  render() {
+    const { name } = this.props;
+    const mood = this.state.mood;
+    const style = { color: moods[mood] };
+    return (
+      <p style={style}>
+        Hello. My name is {name} and I'm {mood}
+        <button onClick={this.changeMood}>Change Mood</button>
+      </p>
+    );
+  }
+}
+
+PersonClass.defaultProps = {
+  name: 'Visitor',
+}
+
+//PersonHooks
+export function PersonHooks(props) {
+    const {name} = props;
+    const [mood , setMood] = useState(getRandomMood());
+
+    function changeMood() {
+      setMood(getRandomMood());
+    }
+
+    const style = {color : moods[mood]};
+
+    return (
+        <p style={style}>
+          Hello. My name is {name} and I'm {mood}
+          <button onClick={changeMood}>Change Mood</button>
+        </p>
+    );
+}
+
+PersonHooks.defaultProps = {
+  name: 'Visitor',
+}
+
+
+//General definitions for 2 components
+const moods = {
+  happy: 'pink',
+  sad: 'blue',
+  angry: 'red',
+  tranquil: 'green',
+}
+
+function getRandomMood() {
+  return _.sample(Object.keys(moods));  
 }
 ```
