--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -441,8 +441,8 @@ export default class PersonClass extends React.Component {
     const style = { color: moods[mood] };
     return (
       <p style={style}>
-        Hello. My name is {name} and I'm {mood}
-        <button onClick={this.changeMood}>Change Mood</button>
+          Hello. My name is {name} and I'm {mood}
+          <button onClick={this.changeMood}>Change Mood</button>
       </p>
     );
   }
@@ -488,3 +488,34 @@ function getRandomMood() {
   return _.sample(Object.keys(moods));  
 }
 ```
+# JSX converts HTML tags into react elements instead of use React.createElement().
+# Babel that powered by webpack converts JSX to JavaScript for browser.
+
+You are not required to use JSX, but JSX makes it easier to write React applications.
+
+Example:
+This code->
+```JS
+function App(props) {
+  return (
+    <div>
+      <p className="demo">Hello World</p>
+    </div>
+  )
+}
+
+ReactDOM.render(<App />, document.querySelector('main'));
+```
+Convert to :
+
+```JS
+function App(props) {
+  return (
+    React.createElement("div", null,
+    React.createElement("p", { className: "demo" }, "Hello World")));
+}
+
+ReactDOM.render(React.createElement(App, null), document.querySelector('main'));
+```
+
+React.createElement create new element in Virtual DOM of react with childrens...
