--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -488,10 +488,10 @@ function getRandomMood() {
   return _.sample(Object.keys(moods));  
 }
 ```
+------------------------------------------------------------------------
 # JSX converts HTML tags into react elements instead of use React.createElement().
 # Babel that powered by webpack converts JSX to JavaScript for browser.
-
-You are not required to use JSX, but JSX makes it easier to write React applications.
+- You are not required to use JSX, but JSX makes it easier to write React applications.
 
 Example:
 This code->
