--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -17,7 +17,7 @@
   - Add a new JavaScript file
   - Import the component and show it on screen
 
-For react project need:
+# For react project need (in this order only!):
 
 1.) Install Node.JS
 
