--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -22,10 +22,11 @@
 1.) Install Node.JS
 
 At the general folder of all projects or at the specific project do this to install react and webpack:</br>
-2.) npm init -y</br>
-3.) npm install --save-dev react react-dom webpack webpack-cli@3.3.12 babel-cli @babel/core @babel/preset-react html-webpack-plugin clean-webpack-plugin webpack-dev-server babel-loader mini-css-extract-plugin css-loader
+2.) create new folder and:
+3.) npm init -y</br>
+4.) npm install --save-dev react react-dom webpack webpack-cli@3.3.12 babel-cli @babel/core @babel/preset-react html-webpack-plugin clean-webpack-plugin webpack-dev-server babel-loader mini-css-extract-plugin css-loader
 
-4.) For such a project structure:</br>
+5.) Copy this structure into folder with package.json or new folder inside the same path:</br>
 <pre>
 css/main.css
 html/index.html
