--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -22,7 +22,7 @@
 1.) Install Node.JS
 
 At the general folder of all projects or at the specific project do this to install react and webpack:</br>
-2.) create new folder and:
+2.) create new folder and:</br>
 3.) npm init -y</br>
 4.) npm install --save-dev react react-dom webpack webpack-cli@3.3.12 babel-cli @babel/core @babel/preset-react html-webpack-plugin clean-webpack-plugin webpack-dev-server babel-loader mini-css-extract-plugin css-loader
 
