exercise first version

--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -87,7 +87,7 @@ module.exports = {
 ```
 6.) npx webpack-dev-server -d for development environment or npx webpack -p for production environment
 
-7.) To use with scss - should: </b> a.) run npm install node-sass </b> b.) change test: /\.css$/, to  test: /\.scss$/,</b> c.) rename the folder from css to scss and file to *.scss </b> d.) import '../scss/style.scss';
+7.) To use with scss - should: </br> a.) run npm install node-sass </br> b.) change test: /\.css$/, to  test: /\.scss$/,</br> c.) rename the folder from css to scss and file to *.scss </br> d.) import '../scss/style.scss';
 
 ----------------------------------------------------------------------------------------------------------------
 # Debugging React Apps
