exercise first version

--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -87,11 +87,25 @@ module.exports = {
 ```
 6.) npx webpack-dev-server -d for development environment or npx webpack -p for production environment
 
->7.) To use with scss - should: </br>
-  >> a.) Run npm install node-sass </br>
-  >> b.) Change test: /\.css$/,   to   test: /\.scss$/,</br>
-  >> c.) Rename the folder from css to scss and  file to *.scss </br>
-  >> d.) In main.js import '../scss/style.scss';
+-----------------    SASS/SCSS    ----------------
+בו משתמשים CSS-דומה יותר ל SCSS-שניהם שווים רק בסינטקס אחר וכיון ש
+
+CSS - אין אפשרות להריץ אותו ככה הוא חייב להיות מתורגם ל
+http://koala-app.com/  :הכלי שמתרגם הוא
+SCSS צריך להוריד ולהתקין ואז להוסיף בפלוס את התיקיה של הפרויקט והוא יודע למצא את הקובץ 
+CSS - הוא מתרגם אותו אוטומטית ל
+
+:ואז הוא פותח את הקובץ שאותו מקנפגים Edit Settings <- Project Settings <- אחרי שמעלים את התיקיה - לחצן ימני על התיקיה 
+"mappings": [
+		 {	
+		 	"src": "scss",
+		 	"dest": "css"
+		 }
+],
+
+שעליו עובדים SCSS -ולשני קובץ CSS - עושים 2 תיקיות לאחד מכניסים קובץ
+
+In main.js import '../css/style.css';
 
 ----------------------------------------------------------------------------------------------------------------
 # Debugging React Apps
