exercise first version

--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -87,7 +87,8 @@ module.exports = {
 ```
 6.) npx webpack-dev-server -d for development environment or npx webpack -p for production environment
 
------------------    SASS/SCSS    ----------------
+# -----------------    SASS/SCSS    ----------------
+```
 בו משתמשים CSS-דומה יותר ל SCSS-שניהם שווים רק בסינטקס אחר וכיון ש
 
 CSS - אין אפשרות להריץ אותו ככה הוא חייב להיות מתורגם ל
@@ -106,7 +107,7 @@ CSS - הוא מתרגם אותו אוטומטית ל
 שעליו עובדים SCSS -ולשני קובץ CSS - עושים 2 תיקיות לאחד מכניסים קובץ
 
 In main.js import '../css/style.css';
-
+```
 ----------------------------------------------------------------------------------------------------------------
 # Debugging React Apps
 
