--- a/my-react-course/course Summaries/1-5.md
+++ b/my-react-course/course Summaries/1-5.md
@@ -105,9 +105,11 @@ CSS - הוא מתרגם אותו אוטומטית ל
 ],
 
 שעליו עובדים SCSS -ולשני קובץ CSS - עושים 2 תיקיות לאחד מכניסים קובץ
-
-In main.js import '../css/style.css';
 ```
+> To use css do one of 2 options:
+>> 1.) in index.html file add css path.
+>> 2.) In main.js import '../css/style.css';
+
 ----------------------------------------------------------------------------------------------------------------
 # Debugging React Apps
 
