updates summaries lessons: 12-16

--- a/my-react-course/course summaries/2.) how-to-write-a-component.md
+++ b/my-react-course/course summaries/2.) how-to-write-a-component.md
@@ -6,7 +6,7 @@
   - Passing numbers
   - Passing arrays
   - {...} to object - React create property from each item in object
-  Note: If passing not srting prop uts the props inside {}
+  - Note: If passing not srting prop need to put the props inside {}
 
 3. Default property values
 
@@ -160,49 +160,6 @@ export default function Counter() {
   );
 }
 ```
-example for mutable Data:
-
-```JS
-import React from 'react';
-import { useState } from 'react';
-
-export default function Colors(props) {
-  const [colors, setColors] = useState({ red: true, blue: false, green: true });
-  //NOT WORK
-  function toggleColor(color) {
-    colors[color] = !colors[color];
-    setColors(colors);
-  }
-  //WORK
-  function toggleColor(color) {
-    setColors(previousValue => (
-      {
-        ...previousValue,
-        [color]: !previousValue[color],
-      }));
-  }
-
-  return (
-    <div>
-      <label>
-        Red
-        <input type="checkbox" checked={colors.red} onChange={() => toggleColor('red')} />
-      </label>
-      <label>
-        Blue
-        <input type="checkbox" checked={colors.blue} onChange={() => toggleColor('blue')} />
-      </label>
-      <label>
-        Green
-        <input type="checkbox" checked={colors.green} onChange={() => toggleColor('green')} />
-      </label>
-    </div>
-  );
-}
-```
-- התנהגות זו היא הסיבה שאנחנו מעדיפים לשמור בסטייט רק אובייקטים שלא ניתנים לשינוי וכל שינוי מחייב יצירה של אובייקט חדש
-- Immutable Object :אובייקטים אלו נקראים 
-
 # Passing state as props
 
 1. Data ownership in React
