--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -1,3 +1,12 @@
+<div dir="rtl">
+1. הדרך שלנו לדווח לריאקט על קשר בין אלמנט בין שני סבבים של render היא המאפיין key:
+2. אנחנו יכולים להעביר מאפיין key לכל אלמנט ב Virtual DOM. מאפיין זה לא ממשיך למסך ותפקידו היחיד הוא לתת רמז לריאקט לגבי תפקיד האלמנט שמחזיק אותו.
+3. כשיש אלמנט שיש לו מאפיין key שמופיע כמו שהוא במקום אחר על המסך אחרי render, ריאקט יעדיף להזיז את האלמנט כמו שהוא בשביל להתאים למקום החדש.
+
+כשיש אלמנט שהיה לו מאפיין key לפני render, אבל אחרי render אין לנו אלמנט עם אותו key, ריאקט 
+</div>
+
+```JS
 import React from 'react';
 import ReactDOM from 'react-dom';
 import { useState } from 'react';
@@ -57,3 +66,4 @@ const App = () => {
 // main.js
 const root = document.querySelector('main');
 ReactDOM.render(<App />, root);
+```
