--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -1,9 +1,19 @@
 <div dir="rtl">
-1. הדרך שלנו לדווח לריאקט על קשר בין אלמנט בין שני סבבים של render היא המאפיין key:
-2. אנחנו יכולים להעביר מאפיין key לכל אלמנט ב Virtual DOM. מאפיין זה לא ממשיך למסך ותפקידו היחיד הוא לתת רמז לריאקט לגבי תפקיד האלמנט שמחזיק אותו.
-3. כשיש אלמנט שיש לו מאפיין key שמופיע כמו שהוא במקום אחר על המסך אחרי render, ריאקט יעדיף להזיז את האלמנט כמו שהוא בשביל להתאים למקום החדש.
-
-כשיש אלמנט שהיה לו מאפיין key לפני render, אבל אחרי render אין לנו אלמנט עם אותו key, ריאקט 
+<p>
+    הדרך שלנו לדווח לריאקט על קשר בין אלמנט בין שני סבבים של render היא המאפיין key:
+</P>
+<p>
+    1.)
+    אנחנו יכולים להעביר מאפיין key לכל אלמנט ב Virtual DOM. מאפיין זה לא ממשיך למסך ותפקידו היחיד הוא לתת רמז לריאקט לגבי תפקיד האלמנט שמחזיק אותו.
+</p>
+<p>
+    2.)
+    כשיש אלמנט שיש לו מאפיין key שמופיע כמו שהוא במקום אחר על המסך אחרי render, ריאקט יעדיף להזיז את האלמנט כמו שהוא בשביל להתאים למקום החדש.
+</p>
+<p>
+    3.)
+    כשיש אלמנט שהיה לו מאפיין key לפני render, אבל אחרי render אין לנו אלמנט עם אותו key, ריאקט 
+</p>
 </div>
 
 ```JS
