--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -1,5 +1,5 @@
-# Key
 <div dir="rtl">
+<h1> Key </h1>
 <p>
     הדרך שלנו לדווח לריאקט על קשר בין אלמנט בין שני סבבים של render היא המאפיין key:
 </P>
