updates summaries lessons: 17-19

--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -17,6 +17,8 @@
 </p>
 </div>
 
+# Examples for key:
+# 1.)
 ```JS
 import React from 'react';
 import ReactDOM from 'react-dom';
@@ -27,7 +29,7 @@ function CheckableList({items}) {
   const [selectedItems , setSelectedItems] = useState(new Set());
   const [key , setKey] = useState(0);
 
-  function removeAllChecked() {
+  function unselectAll() {
     setKey(key => !key);
     setSelectedItems(new Set());
   }
@@ -40,7 +42,7 @@ function CheckableList({items}) {
 
   return (
     <>
-      <button onClick={removeAllChecked}>Remove all checked</button>
+      <button onClick={unselectAll}>Unselect all</button>
       <p>{Array.from(selectedItems).join(',')}</p>
       <ul key={key}>
           {items.map(item =>(
@@ -77,4 +79,110 @@ const App = () => {
 // main.js
 const root = document.querySelector('main');
 ReactDOM.render(<App />, root);
+```
+# 2.)
+```JS
+import React from 'react';
+import ReactDOM from 'react-dom';
+import { useState } from "react";
+
+function SelectableList({ items , reset}) {
+  const [selectedItems , setSelectedItems] = useState([]);
+  const [showItems , setShowItems] = useState(items);
+  
+
+  function updateSelectedItem(add , item) {
+    add  && setSelectedItems([...selectedItems , item]);
+    !add && setSelectedItems(selectedItems.filter(i=> i !== item))
+  }
+
+  function deleteSelectedItemsFromShowItems() {
+    setShowItems(items.filter(item => !selectedItems.includes(item)));
+  }
+
+  return (
+    <>
+      <button onClick = {deleteSelectedItemsFromShowItems}>Delete</button>
+      <button onClick = {reset}>Reset</button>
+      <ul>
+        {showItems.map(item => (
+          <li key={item}>
+            <label>
+              <input type="checkbox" checked={selectedItems.includes(item)}  onChange = { (e)=>updateSelectedItem(e.target.checked , item)}/>
+              {item}
+            </label>
+          </li>
+        ))}
+      </ul>
+    </>
+  );
+}
+
+
+const App = () => {
+  const items = ['one', 'two', 'three', 'four', 'five' , 'six' , 'seven' , 'height' , 'nine' , 'ten'];
+  const [keyS , setKey] = useState(0);
+  
+  function reset() {
+    setKey(keyS=> !keyS);
+  }
+
+  return (
+    <div>
+      <SelectableList key = {keyS} items={items} reset={reset}/>
+    </div>
+  )
+};
+
+
+// main.js
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
+
+```
+# 3.) 
+```JS
+import React , { useState } from 'react';
+
+function getSortedData(indexOfColumnAndDirection , data) {
+    if(!indexOfColumnAndDirection.index) return data;
+    
+    return [data[0]].concat(data.slice(1).sort((b , a) => {
+        const textA = a[indexOfColumnAndDirection.index].toUpperCase();
+        const textB = b[indexOfColumnAndDirection.index].toUpperCase();
+        if(indexOfColumnAndDirection.direction === 'up') return (textA > textB) ? -1 : (textA < textB) ? 1 : 0;
+                return (textA < textB) ? -1 : (textA > textB) ? 1 : 0;
+    }));
+}
+
+export default function SortableTable ({data}) {
+    const [indexOfColumnAndDirection , setindexOfColumnAndDirection] = useState( {index: 0 , direction: ''} ) ;
+
+    const sortedData = getSortedData(indexOfColumnAndDirection, data);
+
+    function clickItemHandler(indexOfColumn) {
+        const direction = indexOfColumnAndDirection.direction === 'up' ? 'down' : 'up';
+        setindexOfColumnAndDirection( {index: indexOfColumn , direction: direction} ) ;
+    }
+
+    return (
+        <table className= "table table-hover table-dark">
+            <tbody>{
+                sortedData.map ((row , indexR) =>
+                    <tr key = {row[0]}>
+                        {
+                            row.map((item , indexC) => 
+                                <td key = {item+row[3]} 
+                                    onClick = { indexR === 0 ? () => { clickItemHandler(indexC) } : ()=>{}}>
+                                    {item}
+                                </td>
+                            )
+                        }
+                    </tr>
+                )
+            }
+            </tbody>    
+        </table>
+    )
+}
 ```
