updates summaries lessons: 20-22

--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -1,5 +1,5 @@
 <div dir="rtl">
-<h1> Key </h1>
+<h1> Lists and Key </h1>
 <p>
     הדרך שלנו לדווח לריאקט על קשר בין אלמנט בין שני סבבים של render היא המאפיין key:
 </P>
@@ -17,8 +17,8 @@
 </p>
 </div>
 
-# Examples for key:
-# 1.)
+# Examples for lists / key:
+# 1.) Example for lists / key
 ```JS
 import React from 'react';
 import ReactDOM from 'react-dom';
@@ -80,7 +80,7 @@ const App = () => {
 const root = document.querySelector('main');
 ReactDOM.render(<App />, root);
 ```
-# 2.)
+# 2.) Example for lists / key
 ```JS
 import React from 'react';
 import ReactDOM from 'react-dom';
@@ -140,22 +140,26 @@ const root = document.querySelector('main');
 ReactDOM.render(<App />, root);
 
 ```
-# 3.) 
+# 3.) Example for lists / key
 ```JS
 import React , { useState } from 'react';
 
 function getSortedData(indexOfColumnAndDirection , data) {
-    if(!indexOfColumnAndDirection.index) return data;
-    
+    function sortMe(a , b) {
+        if(indexOfColumnAndDirection.direction === 'up') return (a > b) ? -1 : (a < b) ? 1 : 0;
+        return (a < b) ? -1 : (a > b) ? 1 : 0;
+    }
+
     return [data[0]].concat(data.slice(1).sort((b , a) => {
-        const textA = a[indexOfColumnAndDirection.index].toUpperCase();
-        const textB = b[indexOfColumnAndDirection.index].toUpperCase();
-        if(indexOfColumnAndDirection.direction === 'up') return (textA > textB) ? -1 : (textA < textB) ? 1 : 0;
-                return (textA < textB) ? -1 : (textA > textB) ? 1 : 0;
+        let itemA = a[indexOfColumnAndDirection.index];
+        let itemB = b[indexOfColumnAndDirection.index];
+        indexOfColumnAndDirection.index !== 0 && (itemA = itemA.toUpperCase() , itemB = itemB.toUpperCase());
+        return sortMe(itemA , itemB);
     }));
 }
 
-export default function SortableTable ({data}) {
+
+export default function SortableTable({data}) {
     const [indexOfColumnAndDirection , setindexOfColumnAndDirection] = useState( {index: 0 , direction: ''} ) ;
 
     const sortedData = getSortedData(indexOfColumnAndDirection, data);
@@ -168,12 +172,12 @@ export default function SortableTable ({data}) {
     return (
         <table className= "table table-hover table-dark">
             <tbody>{
-                sortedData.map ((row , indexR) =>
-                    <tr key = {row[0]}>
+                sortedData.map ((row , i) =>
+                    <tr key = {i}>
                         {
-                            row.map((item , indexC) => 
-                                <td key = {item+row[3]} 
-                                    onClick = { indexR === 0 ? () => { clickItemHandler(indexC) } : ()=>{}}>
+                            row.map((item , j) => 
+                                <td key = {j} 
+                                    onClick = { i === 0 ? () => { clickItemHandler(j) } : ()=>{}}>
                                     {item}
                                 </td>
                             )
@@ -183,6 +187,122 @@ export default function SortableTable ({data}) {
             }
             </tbody>    
         </table>
-    )
+    );
 }
+```
+
+<div dir="rtl">
+  <h1> useRef </h1>
+</div>
+
+# How to use:
+```JS
+import { useState, useRef } from 'react'; // import
+
+const divContainer = useRef(null); // definition
+
+<div data-my-stuff="hello" data-my-name = "gita" ref={divContainer}> </div> //connect
+
+function showMyThing() {
+
+    const divDOM = divContainer.current; //DOMElement
+
+    alert(`${divDOM.getAttribute("data-my-stuff")} ${divDOM.getAttribute("data-my-name")}`); //getAttribute
+
+    alert(`${divDOM.dataset.myStuff} ${divDOM.dataset.myName}`); //dataset
+    
+}
+```
+# Examples for useRef
+-
+# 1.) Example for useRef
+```JS
+import React from 'react';
+import ReactDOM from 'react-dom';
+import { useState, useRef } from 'react';
+
+import '../styles/main.scss';
+
+const App = () => {
+  const [word1, setWord1] = useState('');
+  const [word2, setWord2] = useState('');
+  const divContainer = useRef(null);
+  const word2Ref = useRef(null);
+
+  function showMyThing() {
+    const divDOM = divContainer.current;
+    alert(`${divDOM.getAttribute("data-my-stuff")} ${divDOM.getAttribute("data-my-name")}`);
+    alert(`${divDOM.dataset.myStuff} ${divDOM.dataset.myName}`);
+  }
+
+  function setFirstWord(val) {
+    setWord1(val);
+    if(val.endsWith(' ')) {
+        word2Ref.current.focus();
+    }
+  }
+
+  function setSecondWord(val) {
+    setWord2(val);
+  }
+
+  return (
+    <div data-my-stuff="hello" data-my-name = "gita" ref={divContainer}>
+      <button onClick={showMyThing}>Show My Thing</button>
+      <input type="text" value={word1} onChange={(e) => setFirstWord(e.target.value)} />
+      <input type="text" value={word2} onChange={(e) => setSecondWord(e.target.value)} ref = {word2Ref}/>
+    </div>
+  )
+};
+
+// main.js
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
+```
+
+# 2.) Example for useRef:
+```JS
+const MultiSelectAndDeleteList = (props) => {
+  const { items } = props;
+  const [ visibleItems, setVisibleItems ] = useState(items);  
+  const ulRef = useRef(null);
+
+  function reset() {
+    setVisibleItems(items);
+  }
+
+  function deleteSelected() {
+      setVisibleItems([...ulRef.current.querySelectorAll('input:not(:checked)')].map(inp => inp.nextSibling.textContent));
+  }
+
+  return (
+    <div>
+      <button onClick={reset}>Reset</button>
+      <button onClick={deleteSelected}>Delete</button>
+      <ul ref = {ulRef}>
+        {visibleItems.map(item => (
+          <li key={item} >
+            <label>
+              <input type="checkbox" />
+              {item}
+            </label>
+          </li>
+        ))}
+      </ul>
+    </div>
+  );
+}
+
+const App = () => {
+  const items = ['one', 'two', 'three', 'four', 'five'];
+  return (
+    <div>
+      <MultiSelectAndDeleteList items={items} />
+    </div>
+  )
+};
+
+// main.js
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
 ```
