updates summaries lessons: 20-22

--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -1,20 +1,20 @@
 <div dir="rtl">
-<h1> Lists and Key </h1>
-<p>
-    הדרך שלנו לדווח לריאקט על קשר בין אלמנט בין שני סבבים של render היא המאפיין key:
-</P>
-<p>
-    1.)
-    אנחנו יכולים להעביר מאפיין key לכל אלמנט ב Virtual DOM. מאפיין זה לא ממשיך למסך ותפקידו היחיד הוא לתת רמז לריאקט לגבי תפקיד האלמנט שמחזיק אותו.
-</p>
-<p>
-    2.)
-    כשיש אלמנט שיש לו מאפיין key שמופיע כמו שהוא במקום אחר על המסך אחרי render, ריאקט יעדיף להזיז את האלמנט כמו שהוא בשביל להתאים למקום החדש.
-</p>
-<p>
-    3.)
-    כשיש אלמנט שהיה לו מאפיין key לפני render, אבל אחרי render אין לנו אלמנט עם אותו key, ריאקט 
-</p>
+  <h1> Lists and Key </h1>
+  <p>
+      הדרך שלנו לדווח לריאקט על קשר בין אלמנט בין שני סבבים של render היא המאפיין key:
+  </P>
+  <p>
+      1.)
+      אנחנו יכולים להעביר מאפיין key לכל אלמנט ב Virtual DOM. מאפיין זה לא ממשיך למסך ותפקידו היחיד הוא לתת רמז לריאקט לגבי תפקיד האלמנט שמחזיק אותו.
+  </p>
+  <p>
+      2.)
+      כשיש אלמנט שיש לו מאפיין key שמופיע כמו שהוא במקום אחר על המסך אחרי render, ריאקט יעדיף להזיז את האלמנט כמו שהוא בשביל להתאים למקום החדש.
+  </p>
+  <p>
+      3.)
+      כשיש אלמנט שהיה לו מאפיין key לפני render, אבל אחרי render אין לנו אלמנט עם אותו key, ריאקט 
+  </p>
 </div>
 
 # Examples for lists / key:
@@ -305,3 +305,24 @@ const App = () => {
 const root = document.querySelector('main');
 ReactDOM.render(<App />, root);
 ```
+<div dir="rtl">
+  <h1> useEffect </h1>
+  <pre>
+        הפקדים שראינו עד עכשיו היו כולם סגורים בתוך העולם של ריאקט. הדינמיקה שלהם התחילה מאירוע, שגרם לשינוי בסטייט שבתורו גרם ל render מחדש וכך ראינו את השינוי על המסך. אבל הפקודה render מוגבלת רק לשינויים במה שאנחנו רואים על המסך בתוך העולם של פקדי ריאקט. הפקודה useEffect עליה נלמד בשיעור זה תתן לנו "לברוח" מהעולם של ריאקט כך ששינויים בסטייט ישפיעו על העולם החיצון.
+  </pre>
+  <pre>
+      מה יש מחוץ לריאקט?
+  </pre>
+  <pre>
+      1.) שורת הכותרת (ה title) בדפדפן נקבעת על ידי משתנה גלובאלי בשם document.title - משתנה שנמצא מחוץ לריאקט. בעזרת useEffect נוכל לחבר שינויים בסטייט כך שיגרמו באופן אוטומטי לשינויים במשתנה זה, וכך משתנה מהסטייט ישפיע על כותרת המסמך בדפדפן.
+  </pre>
+  <pre>
+      2.) שילוב API חיצוני בתוכנית (לדוגמא YouTube API) הוא מנגנון חיצוני לריאקט. בעזרת useEffect נוכל לחבר משתנה מהסטייט לדוגמא למזהה סרט מוטמע מ YouTube, וכך בעקבות שינוי בסטייט באופן אוטומטי הסרט יוחלף.
+  </pre>
+  <pre>
+      3.) הרבה פעמים נשתמש ב useEffect כדי להתחיל פעולה אסינכרונית באופן אוטומטי בעקבות שינוי בסטייט. בצורה כזו לא משנה מאיזה מקום משתנה הסטייט עודכן, הפעולה האסינכרונית תתחיל בכל מקרה ברגע הנכון.
+  </pre>
+  <pre>
+      4.) מעבר להשפעה על העולם החיצון ל useEffect יש מנגנון פעולה ייחודי שמאפשר לזהות את הפעם הראשונה שריאקט מפעיל render על הפקד שלכם, ולכן נוכל להשתמש בו גם עבור קוד איתחול - לדוגמא לאתחל Timer כשפקד מסוים נכנס לעמוד.
+  </pre>
+</div>
